projects/compiler/test/parser/traitdecl_error_bad_trait.3.out
Error at %FILE_NAME%:1:19
Unexpected token '(', expected 'identifier':
  |  trait FooBar123 : (Foo) => Bar {
                       ^