projects/compiler/test/parser/traitdecl_error_bad_trait.3.abra
trait FooBar123 : (Foo) => Bar {

}
